[package]
name = "rsh"
version = "0.1.0"
edition = "2021"
description = "rsh — a shell for RustOS, installed at /bin/rsh"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rsh"
path = "src/main.rs"

[dependencies]
rustos-rt = { git = "https://github.com/RustOS-Dev/rustos-rt" }

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true
codegen-units = 1

[profile.dev]
panic = "abort"
